// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App empty 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 flDrKl"
>
  <div
    class="StyledGrid-sc-1wofa1l-0 himrOk"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 fOyniV"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 iYGvEp"
      >
        <button
          aria-label="show my themes"
          class="StyledButton-sc-323bzc-0 kYtlmw"
          type="button"
        >
          <svg
            aria-label="Menu"
            class="StyledIcon-sc-ofa7kd-0 cnewlt"
            viewBox="0 0 24 24"
          >
            <path
              d="M2 19h20M2 5h20M2 12h20"
              fill="none"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
        </button>
        <div
          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 lbllaT"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 jzOfgr"
        >
          <button
            aria-label="undo last change"
            class="StyledButton-sc-323bzc-0 kYtlmw"
            type="button"
          >
            <svg
              aria-label="Undo"
              class="StyledIcon-sc-ofa7kd-0 cnewlt"
              viewBox="0 0 24 24"
            >
              <path
                d="M7.18 4 8.6 5.44 6.06 8h9.71a6 6 0 0 1 0 12h-2v-2h2a4 4 0 0 0 0-8H6.06l2.54 2.51-1.42 1.41L2.23 9z"
              />
            </svg>
          </button>
          <button
            aria-label="redo last change"
            class="StyledButton-sc-323bzc-0 kYtlmw"
            type="button"
          >
            <svg
              aria-label="Redo"
              class="StyledIcon-sc-ofa7kd-0 cnewlt"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.82 4 15.4 5.44 17.94 8H8.23a6 6 0 0 0 0 12h2v-2h-2a4 4 0 0 1 0-8h9.71l-2.54 2.51 1.41 1.41L21.77 9z"
              />
            </svg>
          </button>
        </div>
        <div
          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 lbllaT"
        />
        <button
          aria-label="change theme mode to dark"
          class="StyledButton-sc-323bzc-0 kYtlmw"
          type="button"
        >
          <svg
            aria-label="Sun"
            class="StyledIcon-sc-ofa7kd-0 cnewlt"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4V2m0 20v-2m8-8h2M2 12h2m13.657-5.657L19.07 4.93M4.93 19.07l1.414-1.414m0-11.314L4.93 4.93m14.14 14.14-1.414-1.414M12 17a5 5 0 1 0 0-10 5 5 0 0 0 0 10z"
              stroke="#000"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </button>
        <div
          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 lbllaT"
        />
        <button
          aria-label="edit raw JSON"
          class="StyledButton-sc-323bzc-0 dCpDhA"
          type="button"
        >
          <svg
            aria-label="Code"
            class="StyledIcon-sc-ofa7kd-0 cnewlt"
            viewBox="0 0 24 24"
          >
            <path
              d="m9 22 6-20m2 15 5-5-5-5M7 17l-5-5 5-5"
              fill="none"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
        </button>
        <div
          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 lbllaT"
        />
        <button
          aria-label="share"
          class="StyledButton-sc-323bzc-0 dCpDhA"
          type="button"
        >
          <svg
            aria-label="Share"
            class="StyledIcon-sc-ofa7kd-0 cnewlt"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 13v10H1V5h10m3-4h9v9m-13 4L23 1 10 14z"
              fill="none"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
        </button>
      </div>
      <div
        class="StyledBox-sc-13pk1d4-0 cFZWYn"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 iNDmPr"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 jmKrpE"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 iZGgcK"
            >
              <label
                class="StyledBox-sc-13pk1d4-0 kfFGNb"
                for="name"
              >
                <span
                  class="StyledText-sc-1sadyjn-0 hpCRgD"
                >
                  name
                </span>
              </label>
              <div
                class="StyledBox-sc-13pk1d4-0 iNDmPr"
              >
                <div
                  class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 kZzThM"
                >
                  <input
                    autocomplete="off"
                    class="StyledTextInput-sc-1x30a0s-0 jIVvSe"
                    name="name"
                    style="text-align: right;"
                    value="my theme"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 jmKrpE"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 iZGgcK"
            >
              <label
                class="StyledBox-sc-13pk1d4-0 kfFGNb"
                for="rounding"
              >
                <span
                  class="StyledText-sc-1sadyjn-0 hpCRgD"
                >
                  rounding
                </span>
              </label>
              <div
                class="StyledBox-sc-13pk1d4-0 iNDmPr"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 cwefyf"
                >
                  <input
                    aria-valuemax="24"
                    aria-valuemin="0"
                    aria-valuenow="4"
                    class="StyledRangeInput-sc-15st9ck-0 bZzDlg"
                    id="rounding"
                    max="24"
                    min="0"
                    name="rounding"
                    step="2"
                    style="text-align: end;"
                    type="range"
                    value="4"
                  />
                  <div
                    class="StyledBox-sc-13pk1d4-0 bHQMzP"
                  >
                    <div
                      class="StyledMaskedInput__StyledMaskedInputContainer-sc-99vkfa-1 khKoea"
                    >
                      <input
                        autocomplete="off"
                        class="StyledMaskedInput-sc-99vkfa-0 jFmFyo"
                        placeholder=""
                        style="text-align: right; width: 48px;"
                        value="4"
                      />
                    </div>
                    <span
                      class="StyledText-sc-1sadyjn-0 hpCRgD"
                    >
                      px
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 jmKrpE"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 iZGgcK"
            >
              <label
                class="StyledBox-sc-13pk1d4-0 kfFGNb"
                for="spacing"
              >
                <span
                  class="StyledText-sc-1sadyjn-0 hpCRgD"
                >
                  spacing
                </span>
              </label>
              <div
                class="StyledBox-sc-13pk1d4-0 iNDmPr"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 cwefyf"
                >
                  <input
                    aria-valuemax="36"
                    aria-valuemin="12"
                    aria-valuenow="24"
                    class="StyledRangeInput-sc-15st9ck-0 bZzDlg"
                    id="spacing"
                    max="36"
                    min="12"
                    name="spacing"
                    step="4"
                    style="text-align: end;"
                    type="range"
                    value="24"
                  />
                  <div
                    class="StyledBox-sc-13pk1d4-0 bHQMzP"
                  >
                    <div
                      class="StyledMaskedInput__StyledMaskedInputContainer-sc-99vkfa-1 khKoea"
                    >
                      <input
                        autocomplete="off"
                        class="StyledMaskedInput-sc-99vkfa-0 jFmFyo"
                        placeholder=""
                        style="text-align: right; width: 48px;"
                        value="24"
                      />
                    </div>
                    <span
                      class="StyledText-sc-1sadyjn-0 hpCRgD"
                    >
                      px
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 jmKrpE"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 iZGgcK"
            >
              <label
                class="StyledBox-sc-13pk1d4-0 kfFGNb"
                for="scale"
              >
                <span
                  class="StyledText-sc-1sadyjn-0 hpCRgD"
                >
                  font scale
                </span>
              </label>
              <div
                class="StyledBox-sc-13pk1d4-0 iNDmPr"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 cwefyf"
                >
                  <input
                    aria-valuemax="4"
                    aria-valuemin="0.2"
                    aria-valuenow="1"
                    class="StyledRangeInput-sc-15st9ck-0 bZzDlg"
                    id="scale"
                    max="4"
                    min="0.2"
                    name="scale"
                    step="0.1"
                    style="text-align: end;"
                    type="range"
                    value="1"
                  />
                  <div
                    class="StyledBox-sc-13pk1d4-0 bHQMzP"
                  >
                    <div
                      class="StyledMaskedInput__StyledMaskedInputContainer-sc-99vkfa-1 khKoea"
                    >
                      <input
                        autocomplete="off"
                        class="StyledMaskedInput-sc-99vkfa-0 jFmFyo"
                        placeholder=""
                        style="text-align: right; width: 48px;"
                        value="1"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <button
            class="StyledButton-sc-323bzc-0 jAykKq"
            type="button"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 cSWGLy"
            >
              <span
                class="StyledText-sc-1sadyjn-0 hpCRgD"
              >
                fonts
              </span>
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 lbllaT"
              />
              <svg
                aria-label="FormNext"
                class="StyledIcon-sc-ofa7kd-0 cnewlt"
                viewBox="0 0 24 24"
              >
                <path
                  d="m9 6 6 6-6 6"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </button>
          <button
            class="StyledButton-sc-323bzc-0 jAykKq"
            type="button"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 cSWGLy"
            >
              <span
                class="StyledText-sc-1sadyjn-0 hpCRgD"
              >
                colors
              </span>
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 lbllaT"
              />
              <svg
                aria-label="FormNext"
                class="StyledIcon-sc-ofa7kd-0 cnewlt"
                viewBox="0 0 24 24"
              >
                <path
                  d="m9 6 6 6-6 6"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </button>
          <button
            class="StyledButton-sc-323bzc-0 jAykKq"
            type="button"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 cSWGLy"
            >
              <span
                class="StyledText-sc-1sadyjn-0 hpCRgD"
              >
                form field
              </span>
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 lbllaT"
              />
              <svg
                aria-label="FormNext"
                class="StyledIcon-sc-ofa7kd-0 cnewlt"
                viewBox="0 0 24 24"
              >
                <path
                  d="m9 6 6 6-6 6"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </button>
        </div>
        <div
          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 hdzVod"
        />
        <footer
          class="StyledBox-sc-13pk1d4-0 ernqDj"
        >
          <button
            class="StyledButton-sc-323bzc-0 jrLSbg"
            type="button"
          >
            delete theme
          </button>
        </footer>
      </div>
    </div>
    <div
      class="StyledGrommet-sc-19lkkz7-0 gKarQy"
    >
      <main
        class="StyledBox-sc-13pk1d4-0 jqaawo"
      >
        <div
          class="StyledGrid-sc-1wofa1l-0 lgcvIc"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 iDgAVv"
          >
            <header
              class="StyledBox-sc-13pk1d4-0 jgJHvq"
            >
              <a
                class="StyledButton-sc-323bzc-0 fqNSIs"
                href="/"
              >
                <svg
                  aria-label="HomeRounded"
                  class="StyledIcon-sc-ofa7kd-0 kKhdEN"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M1 22V9.76a2 2 0 0 1 .851-1.636l9.575-6.72a1 1 0 0 1 1.149 0l9.574 6.72A2 2 0 0 1 23 9.76V22a1 1 0 0 1-1 1h-5.333a1 1 0 0 1-1-1v-5.674a1 1 0 0 0-1-1H9.333a1 1 0 0 0-1 1V22a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1z"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </a>
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 gJrKvj"
              />
              <div
                class="StyledBox-sc-13pk1d4-0 jzOfgr"
              >
                <a
                  class="StyledButton-sc-323bzc-0 fqNSIs"
                  href="/form"
                >
                  <svg
                    aria-label="Add"
                    class="StyledIcon-sc-ofa7kd-0 kKhdEN"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 22V2M2 12h20"
                      fill="none"
                      stroke="#000"
                      stroke-width="2"
                    />
                  </svg>
                </a>
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  aria-label="Open Menu"
                  class="StyledButton-sc-323bzc-0 jbUvta"
                  type="button"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 hOAJOL"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 hpCRgD"
                    />
                    <svg
                      aria-label="User"
                      class="StyledIcon-sc-ofa7kd-0 kKhdEN"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8 24v-5m8 5v-5M3 24v-5c0-4.97 4.03-8 9-8s9 3.03 9 8v5m-9-13a5 5 0 1 0 0-10 5 5 0 0 0 0 10z"
                        fill="none"
                        stroke="#000"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </button>
              </div>
            </header>
            <div
              class="StyledGrid-sc-1wofa1l-0 jjLwKR"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 eEnKlf"
                tabindex="0"
              >
                <header
                  class="StyledBox-sc-13pk1d4-0 klZenX"
                >
                  <h3
                    class="StyledHeading-sc-1rdh4aw-0 cdetvk"
                  >
                    Clients
                  </h3>
                </header>
                <div
                  class="StyledBox-sc-13pk1d4-0 fHooXl"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 eHAjbp"
                  >
                    27
                  </span>
                  <div
                    class="StyledBox__StyledBoxGap-sc-13pk1d4-1 irsgiT"
                  />
                  <svg
                    class="StyledMeter-sc-nsxarx-0 donWEh"
                    height="24"
                    preserveAspectRatio="none"
                    viewBox="0 0 384 24"
                    width="384"
                  >
                    <path
                      d="M 12,12 L 372,12"
                      fill="none"
                      stroke="#F2F2F2"
                      stroke-linecap="round"
                      stroke-opacity="0.4"
                      stroke-width="24"
                    />
                    <path
                      d="M 12,12 L 109.2,12"
                      fill="none"
                      stroke="#6600cc"
                      stroke-linecap="round"
                      stroke-width="24"
                    />
                  </svg>
                </div>
                <footer
                  class="StyledBox-sc-13pk1d4-0 kOitIH"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 gCLhsI"
                  >
                    added 2 today
                  </span>
                </footer>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 eEnKlf"
                tabindex="0"
              >
                <header
                  class="StyledBox-sc-13pk1d4-0 klZenX"
                >
                  <h3
                    class="StyledHeading-sc-1rdh4aw-0 cdetvk"
                  >
                    Sites
                  </h3>
                </header>
                <div
                  class="StyledBox-sc-13pk1d4-0 fHooXl"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 eHAjbp"
                  >
                    2
                  </span>
                  <div
                    class="StyledBox__StyledBoxGap-sc-13pk1d4-1 irsgiT"
                  />
                  <svg
                    class="StyledMeter-sc-nsxarx-0 donWEh"
                    height="24"
                    preserveAspectRatio="none"
                    viewBox="0 0 384 24"
                    width="384"
                  >
                    <path
                      d="M 12,12 L 372,12"
                      fill="none"
                      stroke="#F2F2F2"
                      stroke-linecap="round"
                      stroke-opacity="0.4"
                      stroke-width="24"
                    />
                    <path
                      d="M 12,12 L 84,12"
                      fill="none"
                      stroke="#6600cc"
                      stroke-linecap="round"
                      stroke-width="24"
                    />
                  </svg>
                </div>
                <footer
                  class="StyledBox-sc-13pk1d4-0 kOitIH"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 gCLhsI"
                  >
                    all good
                  </span>
                </footer>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 eEnKlf"
                tabindex="0"
              >
                <header
                  class="StyledBox-sc-13pk1d4-0 klZenX"
                >
                  <h3
                    class="StyledHeading-sc-1rdh4aw-0 cdetvk"
                  >
                    Events
                  </h3>
                </header>
                <div
                  class="StyledBox-sc-13pk1d4-0 fHooXl"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 eHAjbp"
                  >
                    270
                  </span>
                  <div
                    class="StyledBox__StyledBoxGap-sc-13pk1d4-1 irsgiT"
                  />
                  <svg
                    class="StyledMeter-sc-nsxarx-0 donWEh"
                    height="24"
                    preserveAspectRatio="none"
                    viewBox="0 0 384 24"
                    width="384"
                  >
                    <path
                      d="M 12,12 L 372,12"
                      fill="none"
                      stroke="#F2F2F2"
                      stroke-linecap="round"
                      stroke-opacity="0.4"
                      stroke-width="24"
                    />
                    <path
                      d="M 12,12 L 109.2,12"
                      fill="none"
                      stroke="#6600cc"
                      stroke-linecap="round"
                      stroke-width="24"
                    />
                  </svg>
                </div>
                <footer
                  class="StyledBox-sc-13pk1d4-0 kOitIH"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 gCLhsI"
                  >
                    client A joined 5m ago
                  </span>
                </footer>
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 iqGkIf"
            >
              <header
                class="StyledBox-sc-13pk1d4-0 klZenX"
              >
                <h3
                  class="StyledHeading-sc-1rdh4aw-0 cdetvk"
                >
                  Latency 
                  <span
                    class="StyledText-sc-1sadyjn-0 gCLhsI"
                  >
                    ms
                  </span>
                </h3>
              </header>
              <div
                class="StyledBox-sc-13pk1d4-0 hwQgCY"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 fErAuK"
                >
                  <div
                    class="StyledStack-sc-ajspsk-0 DIRUt"
                  >
                    <div
                      class="StyledStack__StyledStackLayer-sc-ajspsk-1 jzjNT"
                    >
                      <svg
                        class="StyledChart-sc-1nae0gf-0 eHLzJs"
                        height="0"
                        preserveAspectRatio="none"
                        viewBox="0 0 0 0"
                        width="0"
                      >
                        0
                        <g
                          fill="#6600cc"
                          opacity="0.4"
                          stroke="#6600cc"
                          stroke-linecap="butt"
                          stroke-linejoin="miter"
                          stroke-width="6"
                        >
                          <g>
                            <path
                              d="M 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 Z"
                            />
                          </g>
                        </g>
                      </svg>
                    </div>
                    <div
                      class="StyledStack__StyledStackLayer-sc-ajspsk-1 jzjNT"
                    >
                      <svg
                        class="StyledChart-sc-1nae0gf-0 eHLzJs"
                        height="0"
                        preserveAspectRatio="none"
                        viewBox="0 0 0 0"
                        width="0"
                      >
                        0
                        <g
                          fill="none"
                          stroke="#6600cc"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="6"
                        >
                          <g
                            fill="none"
                          >
                            <path
                              d="M 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0"
                            />
                            
                          </g>
                        </g>
                      </svg>
                    </div>
                    <div
                      class="StyledStack__StyledStackLayer-sc-ajspsk-1 jzjNT"
                    >
                      <svg
                        class="StyledChart-sc-1nae0gf-0 eHLzJs"
                        height="0"
                        preserveAspectRatio="none"
                        viewBox="0 0 0 0"
                        width="0"
                      >
                        0
                        <g
                          fill="#333333"
                          opacity="0.4"
                          stroke="none"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        >
                          <g
                            stroke="none"
                          >
                            <title />
                            <circle
                              cx="0"
                              cy="0"
                              r="6"
                            />
                          </g>
                        </g>
                      </svg>
                    </div>
                    <div
                      class="StyledStack__StyledStackLayer-sc-ajspsk-1 bBReQo"
                    >
                      <div
                        class="StyledBox-sc-13pk1d4-0 fUrYIF"
                      >
                        <span
                          class="StyledText-sc-1sadyjn-0 dmDChg"
                        >
                          2000
                        </span>
                        <span
                          class="StyledText-sc-1sadyjn-0 dmDChg"
                        >
                          1000
                        </span>
                        <span
                          class="StyledText-sc-1sadyjn-0 dmDChg"
                        >
                          0
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="StyledBox__StyledBoxGap-sc-13pk1d4-1 irsgiT"
                  />
                  <div
                    class="StyledStack-sc-ajspsk-0 DIRUt"
                  >
                    <div
                      class="StyledStack__StyledStackLayer-sc-ajspsk-1 jzjNT"
                    >
                      <svg
                        class="StyledChart-sc-1nae0gf-0 eHLzJs"
                        height="0"
                        preserveAspectRatio="none"
                        style="transform: rotate(180deg);"
                        viewBox="0 0 0 0"
                        width="0"
                      >
                        0
                        <g
                          fill="#FFAA15"
                          opacity="0.4"
                          stroke="#FFAA15"
                          stroke-linecap="butt"
                          stroke-linejoin="miter"
                          stroke-width="6"
                        >
                          <g>
                            <path
                              d="M 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 Z"
                            />
                          </g>
                        </g>
                      </svg>
                    </div>
                    <div
                      class="StyledStack__StyledStackLayer-sc-ajspsk-1 jzjNT"
                    >
                      <svg
                        class="StyledChart-sc-1nae0gf-0 eHLzJs"
                        height="0"
                        preserveAspectRatio="none"
                        style="transform: rotate(180deg);"
                        viewBox="0 0 0 0"
                        width="0"
                      >
                        0
                        <g
                          fill="none"
                          stroke="#FFAA15"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="6"
                        >
                          <g
                            fill="none"
                          >
                            <path
                              d="M 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0"
                            />
                            
                          </g>
                        </g>
                      </svg>
                    </div>
                    <div
                      class="StyledStack__StyledStackLayer-sc-ajspsk-1 jzjNT"
                    >
                      <svg
                        class="StyledChart-sc-1nae0gf-0 eHLzJs"
                        height="0"
                        preserveAspectRatio="none"
                        style="transform: rotate(180deg);"
                        viewBox="0 0 0 0"
                        width="0"
                      >
                        0
                        <g
                          fill="#333333"
                          opacity="0.4"
                          stroke="none"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        >
                          <g
                            stroke="none"
                          >
                            <title />
                            <circle
                              cx="0"
                              cy="0"
                              r="6"
                            />
                          </g>
                        </g>
                      </svg>
                    </div>
                    <div
                      class="StyledStack__StyledStackLayer-sc-ajspsk-1 bBReQo"
                    >
                      <div
                        class="StyledBox-sc-13pk1d4-0 gIjQm"
                      >
                        <span
                          class="StyledText-sc-1sadyjn-0 dmDChg"
                        >
                          0
                        </span>
                        <span
                          class="StyledText-sc-1sadyjn-0 dmDChg"
                        >
                          1000
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="StyledBox__StyledBoxGap-sc-13pk1d4-1 irsgiT"
                  />
                  <div
                    class="StyledBox-sc-13pk1d4-0 fmSshX"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 dmDChg"
                    >
                      -24h
                    </span>
                    <span
                      class="StyledText-sc-1sadyjn-0 dmDChg"
                    >
                      -12h
                    </span>
                    <span
                      class="StyledText-sc-1sadyjn-0 dmDChg"
                    >
                      now
                    </span>
                  </div>
                </div>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 irsgiT"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 bvjLos"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 iyaYCL"
                  >
                    <div
                      class="StyledBox-sc-13pk1d4-0 fXfDyR"
                    />
                    <div
                      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 fSvXfz"
                    />
                    <span
                      class="StyledText-sc-1sadyjn-0 dmDChg"
                    >
                      inbound
                    </span>
                  </div>
                  <div
                    class="StyledBox__StyledBoxGap-sc-13pk1d4-1 gJrKvj"
                  />
                  <div
                    class="StyledBox-sc-13pk1d4-0 iyaYCL"
                  >
                    <div
                      class="StyledBox-sc-13pk1d4-0 iAaGsH"
                    />
                    <div
                      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 fSvXfz"
                    />
                    <span
                      class="StyledText-sc-1sadyjn-0 dmDChg"
                    >
                      outbound
                    </span>
                  </div>
                </div>
              </div>
              <footer
                class="StyledBox-sc-13pk1d4-0 kOitIH"
              >
                <span
                  class="StyledText-sc-1sadyjn-0 gCLhsI"
                >
                  peak of 2000ms 15 hours ago
                </span>
              </footer>
            </div>
            <nav
              class="StyledBox-sc-13pk1d4-0 bJBCGG"
            >
              <a
                class="StyledAnchor-sc-1rp7lwl-0 cguQGE"
                href="/accessibility"
              >
                accessibility
              </a>
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 gJrKvj"
              />
              <a
                class="StyledAnchor-sc-1rp7lwl-0 cguQGE"
                href="/typography"
              >
                typography
              </a>
            </nav>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`App empty 2`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 flDrKl"
>
  <div
    class="StyledGrid-sc-1wofa1l-0 himrOk"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 fOyniV"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 iYGvEp"
      >
        <button
          aria-label="return to my theme"
          class="StyledButton-sc-323bzc-0 kYtlmw"
          type="button"
        >
          <svg
            aria-label="Menu"
            class="StyledIcon-sc-ofa7kd-0 cnewlt"
            viewBox="0 0 24 24"
          >
            <path
              d="M2 19h20M2 5h20M2 12h20"
              fill="none"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
        </button>
        <div
          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 lbllaT"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 jzOfgr"
        >
          <button
            aria-label="undo last change"
            class="StyledButton-sc-323bzc-0 kYtlmw"
            type="button"
          >
            <svg
              aria-label="Undo"
              class="StyledIcon-sc-ofa7kd-0 cnewlt"
              viewBox="0 0 24 24"
            >
              <path
                d="M7.18 4 8.6 5.44 6.06 8h9.71a6 6 0 0 1 0 12h-2v-2h2a4 4 0 0 0 0-8H6.06l2.54 2.51-1.42 1.41L2.23 9z"
              />
            </svg>
          </button>
          <button
            aria-label="redo last change"
            class="StyledButton-sc-323bzc-0 kYtlmw"
            type="button"
          >
            <svg
              aria-label="Redo"
              class="StyledIcon-sc-ofa7kd-0 cnewlt"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.82 4 15.4 5.44 17.94 8H8.23a6 6 0 0 0 0 12h2v-2h-2a4 4 0 0 1 0-8h9.71l-2.54 2.51 1.41 1.41L21.77 9z"
              />
            </svg>
          </button>
        </div>
        <div
          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 lbllaT"
        />
        <button
          aria-label="change theme mode to dark"
          class="StyledButton-sc-323bzc-0 kYtlmw"
          type="button"
        >
          <svg
            aria-label="Sun"
            class="StyledIcon-sc-ofa7kd-0 cnewlt"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4V2m0 20v-2m8-8h2M2 12h2m13.657-5.657L19.07 4.93M4.93 19.07l1.414-1.414m0-11.314L4.93 4.93m14.14 14.14-1.414-1.414M12 17a5 5 0 1 0 0-10 5 5 0 0 0 0 10z"
              stroke="#000"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </button>
        <div
          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 lbllaT"
        />
        <button
          aria-label="edit raw JSON"
          class="StyledButton-sc-323bzc-0 dCpDhA"
          type="button"
        >
          <svg
            aria-label="Code"
            class="StyledIcon-sc-ofa7kd-0 cnewlt"
            viewBox="0 0 24 24"
          >
            <path
              d="m9 22 6-20m2 15 5-5-5-5M7 17l-5-5 5-5"
              fill="none"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
        </button>
        <div
          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 lbllaT"
        />
        <button
          aria-label="share"
          class="StyledButton-sc-323bzc-0 dCpDhA"
          type="button"
        >
          <svg
            aria-label="Share"
            class="StyledIcon-sc-ofa7kd-0 cnewlt"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 13v10H1V5h10m3-4h9v9m-13 4L23 1 10 14z"
              fill="none"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
        </button>
      </div>
      <div
        class="StyledBox-sc-13pk1d4-0 iNDmPr"
      >
        <header
          class="StyledBox-sc-13pk1d4-0 Yeesn"
        >
          <h2
            class="StyledHeading-sc-1rdh4aw-0 cjpbIz"
          >
            themes
          </h2>
          <div
            class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYHYac"
          />
          <button
            aria-label="create a new theme"
            class="StyledButton-sc-323bzc-0 dCpDhA"
            type="button"
          >
            <svg
              aria-label="Add"
              class="StyledIcon-sc-ofa7kd-0 cnewlt"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 22V2M2 12h20"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </header>
      </div>
    </div>
    <div
      class="StyledGrommet-sc-19lkkz7-0 gKarQy"
    >
      <main
        class="StyledBox-sc-13pk1d4-0 jqaawo"
      >
        <div
          class="StyledGrid-sc-1wofa1l-0 lgcvIc"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 iDgAVv"
          >
            <header
              class="StyledBox-sc-13pk1d4-0 jgJHvq"
            >
              <a
                class="StyledButton-sc-323bzc-0 fqNSIs"
                href="/"
              >
                <svg
                  aria-label="HomeRounded"
                  class="StyledIcon-sc-ofa7kd-0 kKhdEN"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M1 22V9.76a2 2 0 0 1 .851-1.636l9.575-6.72a1 1 0 0 1 1.149 0l9.574 6.72A2 2 0 0 1 23 9.76V22a1 1 0 0 1-1 1h-5.333a1 1 0 0 1-1-1v-5.674a1 1 0 0 0-1-1H9.333a1 1 0 0 0-1 1V22a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1z"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </a>
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 gJrKvj"
              />
              <div
                class="StyledBox-sc-13pk1d4-0 jzOfgr"
              >
                <a
                  class="StyledButton-sc-323bzc-0 fqNSIs"
                  href="/form"
                >
                  <svg
                    aria-label="Add"
                    class="StyledIcon-sc-ofa7kd-0 kKhdEN"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 22V2M2 12h20"
                      fill="none"
                      stroke="#000"
                      stroke-width="2"
                    />
                  </svg>
                </a>
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  aria-label="Open Menu"
                  class="StyledButton-sc-323bzc-0 jbUvta"
                  type="button"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 hOAJOL"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 hpCRgD"
                    />
                    <svg
                      aria-label="User"
                      class="StyledIcon-sc-ofa7kd-0 kKhdEN"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8 24v-5m8 5v-5M3 24v-5c0-4.97 4.03-8 9-8s9 3.03 9 8v5m-9-13a5 5 0 1 0 0-10 5 5 0 0 0 0 10z"
                        fill="none"
                        stroke="#000"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </button>
              </div>
            </header>
            <div
              class="StyledGrid-sc-1wofa1l-0 jjLwKR"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 eEnKlf"
                tabindex="0"
              >
                <header
                  class="StyledBox-sc-13pk1d4-0 klZenX"
                >
                  <h3
                    class="StyledHeading-sc-1rdh4aw-0 cdetvk"
                  >
                    Clients
                  </h3>
                </header>
                <div
                  class="StyledBox-sc-13pk1d4-0 fHooXl"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 eHAjbp"
                  >
                    27
                  </span>
                  <div
                    class="StyledBox__StyledBoxGap-sc-13pk1d4-1 irsgiT"
                  />
                  <svg
                    class="StyledMeter-sc-nsxarx-0 donWEh"
                    height="24"
                    preserveAspectRatio="none"
                    viewBox="0 0 384 24"
                    width="384"
                  >
                    <path
                      d="M 12,12 L 372,12"
                      fill="none"
                      stroke="#F2F2F2"
                      stroke-linecap="round"
                      stroke-opacity="0.4"
                      stroke-width="24"
                    />
                    <path
                      d="M 12,12 L 109.2,12"
                      fill="none"
                      stroke="#6600cc"
                      stroke-linecap="round"
                      stroke-width="24"
                    />
                  </svg>
                </div>
                <footer
                  class="StyledBox-sc-13pk1d4-0 kOitIH"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 gCLhsI"
                  >
                    added 2 today
                  </span>
                </footer>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 eEnKlf"
                tabindex="0"
              >
                <header
                  class="StyledBox-sc-13pk1d4-0 klZenX"
                >
                  <h3
                    class="StyledHeading-sc-1rdh4aw-0 cdetvk"
                  >
                    Sites
                  </h3>
                </header>
                <div
                  class="StyledBox-sc-13pk1d4-0 fHooXl"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 eHAjbp"
                  >
                    2
                  </span>
                  <div
                    class="StyledBox__StyledBoxGap-sc-13pk1d4-1 irsgiT"
                  />
                  <svg
                    class="StyledMeter-sc-nsxarx-0 donWEh"
                    height="24"
                    preserveAspectRatio="none"
                    viewBox="0 0 384 24"
                    width="384"
                  >
                    <path
                      d="M 12,12 L 372,12"
                      fill="none"
                      stroke="#F2F2F2"
                      stroke-linecap="round"
                      stroke-opacity="0.4"
                      stroke-width="24"
                    />
                    <path
                      d="M 12,12 L 84,12"
                      fill="none"
                      stroke="#6600cc"
                      stroke-linecap="round"
                      stroke-width="24"
                    />
                  </svg>
                </div>
                <footer
                  class="StyledBox-sc-13pk1d4-0 kOitIH"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 gCLhsI"
                  >
                    all good
                  </span>
                </footer>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 eEnKlf"
                tabindex="0"
              >
                <header
                  class="StyledBox-sc-13pk1d4-0 klZenX"
                >
                  <h3
                    class="StyledHeading-sc-1rdh4aw-0 cdetvk"
                  >
                    Events
                  </h3>
                </header>
                <div
                  class="StyledBox-sc-13pk1d4-0 fHooXl"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 eHAjbp"
                  >
                    270
                  </span>
                  <div
                    class="StyledBox__StyledBoxGap-sc-13pk1d4-1 irsgiT"
                  />
                  <svg
                    class="StyledMeter-sc-nsxarx-0 donWEh"
                    height="24"
                    preserveAspectRatio="none"
                    viewBox="0 0 384 24"
                    width="384"
                  >
                    <path
                      d="M 12,12 L 372,12"
                      fill="none"
                      stroke="#F2F2F2"
                      stroke-linecap="round"
                      stroke-opacity="0.4"
                      stroke-width="24"
                    />
                    <path
                      d="M 12,12 L 109.2,12"
                      fill="none"
                      stroke="#6600cc"
                      stroke-linecap="round"
                      stroke-width="24"
                    />
                  </svg>
                </div>
                <footer
                  class="StyledBox-sc-13pk1d4-0 kOitIH"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 gCLhsI"
                  >
                    client A joined 5m ago
                  </span>
                </footer>
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 iqGkIf"
            >
              <header
                class="StyledBox-sc-13pk1d4-0 klZenX"
              >
                <h3
                  class="StyledHeading-sc-1rdh4aw-0 cdetvk"
                >
                  Latency 
                  <span
                    class="StyledText-sc-1sadyjn-0 gCLhsI"
                  >
                    ms
                  </span>
                </h3>
              </header>
              <div
                class="StyledBox-sc-13pk1d4-0 hwQgCY"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 fErAuK"
                >
                  <div
                    class="StyledStack-sc-ajspsk-0 DIRUt"
                  >
                    <div
                      class="StyledStack__StyledStackLayer-sc-ajspsk-1 jzjNT"
                    >
                      <svg
                        class="StyledChart-sc-1nae0gf-0 eHLzJs"
                        height="0"
                        preserveAspectRatio="none"
                        viewBox="0 0 0 0"
                        width="0"
                      >
                        0
                        <g
                          fill="#6600cc"
                          opacity="0.4"
                          stroke="#6600cc"
                          stroke-linecap="butt"
                          stroke-linejoin="miter"
                          stroke-width="6"
                        >
                          <g>
                            <path
                              d="M 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 Z"
                            />
                          </g>
                        </g>
                      </svg>
                    </div>
                    <div
                      class="StyledStack__StyledStackLayer-sc-ajspsk-1 jzjNT"
                    >
                      <svg
                        class="StyledChart-sc-1nae0gf-0 eHLzJs"
                        height="0"
                        preserveAspectRatio="none"
                        viewBox="0 0 0 0"
                        width="0"
                      >
                        0
                        <g
                          fill="none"
                          stroke="#6600cc"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="6"
                        >
                          <g
                            fill="none"
                          >
                            <path
                              d="M 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0"
                            />
                            
                          </g>
                        </g>
                      </svg>
                    </div>
                    <div
                      class="StyledStack__StyledStackLayer-sc-ajspsk-1 jzjNT"
                    >
                      <svg
                        class="StyledChart-sc-1nae0gf-0 eHLzJs"
                        height="0"
                        preserveAspectRatio="none"
                        viewBox="0 0 0 0"
                        width="0"
                      >
                        0
                        <g
                          fill="#333333"
                          opacity="0.4"
                          stroke="none"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        >
                          <g
                            stroke="none"
                          >
                            <title />
                            <circle
                              cx="0"
                              cy="0"
                              r="6"
                            />
                          </g>
                        </g>
                      </svg>
                    </div>
                    <div
                      class="StyledStack__StyledStackLayer-sc-ajspsk-1 bBReQo"
                    >
                      <div
                        class="StyledBox-sc-13pk1d4-0 fUrYIF"
                      >
                        <span
                          class="StyledText-sc-1sadyjn-0 dmDChg"
                        >
                          2000
                        </span>
                        <span
                          class="StyledText-sc-1sadyjn-0 dmDChg"
                        >
                          1000
                        </span>
                        <span
                          class="StyledText-sc-1sadyjn-0 dmDChg"
                        >
                          0
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="StyledBox__StyledBoxGap-sc-13pk1d4-1 irsgiT"
                  />
                  <div
                    class="StyledStack-sc-ajspsk-0 DIRUt"
                  >
                    <div
                      class="StyledStack__StyledStackLayer-sc-ajspsk-1 jzjNT"
                    >
                      <svg
                        class="StyledChart-sc-1nae0gf-0 eHLzJs"
                        height="0"
                        preserveAspectRatio="none"
                        style="transform: rotate(180deg);"
                        viewBox="0 0 0 0"
                        width="0"
                      >
                        0
                        <g
                          fill="#FFAA15"
                          opacity="0.4"
                          stroke="#FFAA15"
                          stroke-linecap="butt"
                          stroke-linejoin="miter"
                          stroke-width="6"
                        >
                          <g>
                            <path
                              d="M 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 Z"
                            />
                          </g>
                        </g>
                      </svg>
                    </div>
                    <div
                      class="StyledStack__StyledStackLayer-sc-ajspsk-1 jzjNT"
                    >
                      <svg
                        class="StyledChart-sc-1nae0gf-0 eHLzJs"
                        height="0"
                        preserveAspectRatio="none"
                        style="transform: rotate(180deg);"
                        viewBox="0 0 0 0"
                        width="0"
                      >
                        0
                        <g
                          fill="none"
                          stroke="#FFAA15"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="6"
                        >
                          <g
                            fill="none"
                          >
                            <path
                              d="M 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0 L 0,0"
                            />
                            
                          </g>
                        </g>
                      </svg>
                    </div>
                    <div
                      class="StyledStack__StyledStackLayer-sc-ajspsk-1 jzjNT"
                    >
                      <svg
                        class="StyledChart-sc-1nae0gf-0 eHLzJs"
                        height="0"
                        preserveAspectRatio="none"
                        style="transform: rotate(180deg);"
                        viewBox="0 0 0 0"
                        width="0"
                      >
                        0
                        <g
                          fill="#333333"
                          opacity="0.4"
                          stroke="none"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        >
                          <g
                            stroke="none"
                          >
                            <title />
                            <circle
                              cx="0"
                              cy="0"
                              r="6"
                            />
                          </g>
                        </g>
                      </svg>
                    </div>
                    <div
                      class="StyledStack__StyledStackLayer-sc-ajspsk-1 bBReQo"
                    >
                      <div
                        class="StyledBox-sc-13pk1d4-0 gIjQm"
                      >
                        <span
                          class="StyledText-sc-1sadyjn-0 dmDChg"
                        >
                          0
                        </span>
                        <span
                          class="StyledText-sc-1sadyjn-0 dmDChg"
                        >
                          1000
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="StyledBox__StyledBoxGap-sc-13pk1d4-1 irsgiT"
                  />
                  <div
                    class="StyledBox-sc-13pk1d4-0 fmSshX"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 dmDChg"
                    >
                      -24h
                    </span>
                    <span
                      class="StyledText-sc-1sadyjn-0 dmDChg"
                    >
                      -12h
                    </span>
                    <span
                      class="StyledText-sc-1sadyjn-0 dmDChg"
                    >
                      now
                    </span>
                  </div>
                </div>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 irsgiT"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 bvjLos"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 iyaYCL"
                  >
                    <div
                      class="StyledBox-sc-13pk1d4-0 fXfDyR"
                    />
                    <div
                      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 fSvXfz"
                    />
                    <span
                      class="StyledText-sc-1sadyjn-0 dmDChg"
                    >
                      inbound
                    </span>
                  </div>
                  <div
                    class="StyledBox__StyledBoxGap-sc-13pk1d4-1 gJrKvj"
                  />
                  <div
                    class="StyledBox-sc-13pk1d4-0 iyaYCL"
                  >
                    <div
                      class="StyledBox-sc-13pk1d4-0 iAaGsH"
                    />
                    <div
                      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 fSvXfz"
                    />
                    <span
                      class="StyledText-sc-1sadyjn-0 dmDChg"
                    >
                      outbound
                    </span>
                  </div>
                </div>
              </div>
              <footer
                class="StyledBox-sc-13pk1d4-0 kOitIH"
              >
                <span
                  class="StyledText-sc-1sadyjn-0 gCLhsI"
                >
                  peak of 2000ms 15 hours ago
                </span>
              </footer>
            </div>
            <nav
              class="StyledBox-sc-13pk1d4-0 bJBCGG"
            >
              <a
                class="StyledAnchor-sc-1rp7lwl-0 cguQGE"
                href="/accessibility"
              >
                accessibility
              </a>
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 gJrKvj"
              />
              <a
                class="StyledAnchor-sc-1rp7lwl-0 cguQGE"
                href="/typography"
              >
                typography
              </a>
            </nav>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;
